dropshot/tests/fail/bad_endpoint13.stderr
error: Endpoint handlers must have the following signature:
           async fn(
               rqctx: dropshot::RequestContext<MyContext>,
               [query_params: Query<Q>,]
               [path_params: Path<P>,]
               [body_param: TypedBody<J>,]
               [body_param: UntypedBody<J>,]
               [raw_request: RawRequest,]
           ) -> Result<HttpResponse*, HttpError>
  --> tests/fail/bad_endpoint13.rs:18:1
   |
18 | / async fn bad_response_type<S: Stuff + Sync + Send + 'static>(
19 | |     _: RequestContext<S>,
20 | | ) -> Result<HttpResponseOk<String>, HttpError> {
   | |______________________________________________^

error: generics are not permitted for endpoint handlers
  --> tests/fail/bad_endpoint13.rs:18:27
   |
18 | async fn bad_response_type<S: Stuff + Sync + Send + 'static>(
   |                           ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

error[E0412]: cannot find type `S` in this scope
  --> tests/fail/bad_endpoint13.rs:19:23
   |
19 |     _: RequestContext<S>,
   |                      -^ not found in this scope
   |                      |
   |                      help: you might be missing a type parameter: `<S>`

error[E0412]: cannot find type `S` in this scope
  --> tests/fail/bad_endpoint13.rs:19:23
   |
19 |     _: RequestContext<S>,
   |                       ^ not found in this scope
